Removed sell shared logic
